<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WeathercardFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_title"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/secondary_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Media -->
                <TextView
                    android:id="@+id/textView"
                    android:textSize="80dp"
                    android:layout_width="230dp"
                    android:layout_height="194dp"
                    android:layout_weight="1"
                    android:text="30°C" />

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="194dp"
                    android:contentDescription="@string/card_content_description"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/icon_cloudy_sunny"
                    />

                <!-- Buttons -->

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/supporting_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>