<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.hdm.weatherapp.fragments.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="de.hdm.weatherapp.fragments.FavoritesFragment"
        android:label="@string/favourites_label"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="de.hdm.weatherapp.fragments.SearchFragment"
        android:label="@string/search_label"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_navigation_search_result"
            app:destination="@id/navigation_search_result"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search_result"
        android:name="de.hdm.weatherapp.fragments.SearchResultFragment"
        tools:layout="@layout/fragment_search_result">
        <argument
            android:name="cityId"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_search_result_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

</navigation>
