<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_title"
        android:textAppearance="?attr/textAppearanceHeadline4" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondary_text"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:text="30"
            android:textSize="80sp" />

        <de.hdm.weatherapp.views.WeatherIconView
            android:id="@+id/weather_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/card_content_description"
            android:cropToPadding="true"
            android:padding="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_cloudy_sunny" />

    </LinearLayout>

    <de.hdm.weatherapp.views.WeatherDetailsView
        android:id="@+id/weather_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
